appId: org.wikipedia
tags:
  - advanced
---
- launchApp:
    clearState: true
# - runFlow: subflows/onboarding-android.yaml
- runFlow: wikipedia-android-advanced/run-test.yml
- tapOn:
    id: "org.wikipedia:id/search_container"
- runScript: scripts/getSearchQuery.js
- inputText: ${output.result}
- assertVisible: ${output.result}
